<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_grey"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MainActivity"
    >

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="60sp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:textColor="@color/primaryDarkColor"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnt_edit_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_color_grey_light"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name">

        <ImageView
            android:id="@+id/img_keyboard_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_all_items_icon"
            android:padding="6dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text"
            app:tint="@color/grey_hint" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="35dp"
            android:autofillHints="no"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/plusjakartasans_semibold"
            android:hint="@string/hint_standard_edit_text"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/gray_edit_text"
            android:textColorHint="@color/grey_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_keyboard_down"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnt_recycle_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp"
        android:visibility="visible"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cnt_edit_text"
        app:layout_constraintStart_toStartOf="@id/cnt_edit_text"
        app:layout_constraintTop_toBottomOf="@id/cnt_edit_text">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_list_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="2"
            tools:listitem="@layout/item_list_cell" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:alpha="0.3"
            android:background="@color/gray_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_list_item"

            />

        <TextView
            android:id="@+id/tv_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/plusjakartasans_regular"
            android:text="@string/label_standard_count"
            android:textColor="@color/gray_edit_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_line"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plusjakartasans_regular"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:text="@string/all"
                android:textColor="@color/gray_edit_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plusjakartasans_regular"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:text="@string/active"
                android:textColor="@color/gray_edit_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plusjakartasans_regular"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:text="@string/completed"
                android:textColor="@color/gray_edit_text"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
